test/src/e2e_vm_tests/test_programs/should_fail/struct_field_privacy_reassignment/src/main.sw
script;

mod lib;

use lib::*;

struct MainStruct {
    pub x: u64,
    y: u64,
}

struct EmptyStruct { }

fn main() {
    let mut ls = LibStruct::new();
    ls.y = 0;
    ls.nested.y = 0;
}
